@@ -20,6 +20,7 @@ Misc:
  - GBA Audio: Allow GBAAVStream to have no video callback
  - ARM7: Force disable LTO on two files to work around a GCC bug
  - Libretro: Use anonymous memory mappers for large blocks of memory
+ - Qt: Add 'Apply' button to settings window
 
 0.3.0: (2015-08-16)
 Features:
